nginx_helloworld_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-hello-world
  namespace: istio-system
spec:
  selector:
    matchLabels:
      run: nginx-hello-world
  template:
    metadata:
      labels:
        run: nginx-hello-world
    spec:
      containers:
        - name: nginx-hello-world
          image: prakhar1989/static-site
          ports:
            - containerPort: 80
