nginx_helloworld_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: istio-system
spec:
  hosts:
    - "helloworld.kongtelalug.com"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: nginx-hello-world
